--- a/data_files/default/weapons.html
+++ b/data_files/default/weapons.html
@@ -169,7 +169,7 @@ Light Melee Weapons</th>
 <td >2 lbs.</td>
 <td >B or P</td>
 <td >—</td>
-<td ><a href="" target="_blank">RTT</a></td>
+<td ><a href="" target="_blank" title="Pathfinder Player Companion: Ranged Tactics Toolbox">RTT</a></td>
 </tr>
 <tr>
 <td><a href="http://www.d20pfsrd.com/equipment---final/weapons/weapon-descriptions/mace-light">Mace, light</a></td>
@@ -511,7 +511,7 @@ Ranged Weapons</th>
 <td >4 lbs.</td>
 <td >B</td>
 <td >—</td>
-<td ><a href="" target="_blank">RTT</a></td>
+<td ><a href="" target="_blank" title="Pathfinder Player Companion: Ranged Tactics Toolbox">RTT</a></td>
 </tr>
 </tbody>
 </table>
@@ -1526,7 +1526,7 @@ Ranged Weapons</th>
 <td >2 lbs.</td>
 <td >P and S</td>
 <td >—</td>
-<td ><a href="" target="_blank">RTT</a></td>
+<td ><a href="" target="_blank" title="Pathfinder Player Companion: Ranged Tactics Toolbox">RTT</a></td>
 </tr>
 <tr >
 <td><a href="http://www.d20pfsrd.com/equipment---final/weapons/weapon-descriptions/longbow">Longbow</a></td>
@@ -1668,7 +1668,7 @@ Ranged Weapons</th>
 <td >2 lbs.</td>
 <td >P</td>
 <td >see text</td>
-<td ><a href="" target="_blank">RTT</a></td>
+<td ><a href="" target="_blank" title="Pathfinder Player Companion: Ranged Tactics Toolbox">RTT</a></td>
 </tr>
 <tr>
 <td><a href="http://www.d20pfsrd.com/equipment---final/weapons/weapon-descriptions/throwing-arrow-cord">Throwing arrow cord</a></td>
@@ -1680,7 +1680,7 @@ Ranged Weapons</th>
 <td >—</td>
 <td >P</td>
 <td >—</td>
-<td ><a href="" target="_blank">RTT</a></td>
+<td ><a href="" target="_blank" title="Pathfinder Player Companion: Ranged Tactics Toolbox">RTT</a></td>
 </tr>
 </tbody>
 </table>
@@ -1722,7 +1722,7 @@ Ammunition</th>
 <td >3 lbs.</td>
 <td >P</td>
 <td ><a href="http://www.d20pfsrd.com/equipment---final/weapons#wpn-quality-grapple">grapple</a></td>
-<td ><a href="" target="_blank">RTT</a></td>
+<td ><a href="" target="_blank" title="Pathfinder Player Companion: Ranged Tactics Toolbox">RTT</a></td>
 </tr>
 <tr >
 <td><a href="http://www.d20pfsrd.com/equipment---final/weapons/weapon-descriptions/ammunition/ammunition-bow-arrow-bleeding">Arrow, bleeding</a> (1)</td>
@@ -1794,7 +1794,7 @@ Ammunition</th>
 <td >3 lbs.</td>
 <td ><a href="http://www.d20pfsrd.com/equipment---final/weapons/weapon-descriptions/ammunition/arrow-incendiary">see text</a></td>
 <td ><a href="http://www.d20pfsrd.com/equipment---final/weapons/weapon-descriptions/ammunition/arrow-incendiary">see text</a></td>
-<td ><a href="" target="_blank">RTT</a></td>
+<td ><a href="" target="_blank" title="Pathfinder Player Companion: Ranged Tactics Toolbox">RTT</a></td>
 </tr>
 <tr>
 <td><a href="http://www.d20pfsrd.com/equipment---final/weapons/weapon-descriptions/ammunition/ammunition-bow-arrow-lodestone">Arrow, lodestone</a> (1)</td>
@@ -1830,7 +1830,7 @@ Ammunition</th>
 <td >3 lbs.</td>
 <td ><a href="http://www.d20pfsrd.com/equipment---final/weapons/weapon-descriptions/ammunition/arrow-pronged">see text</a></td>
 <td ><a href="http://www.d20pfsrd.com/equipment---final/weapons/weapon-descriptions/ammunition/arrow-pronged">see text</a></td>
-<td ><a href="" target="_blank">RTT</a></td>
+<td ><a href="" target="_blank" title="Pathfinder Player Companion: Ranged Tactics Toolbox">RTT</a></td>
 </tr>
 <tr>
 <td><a href="http://www.d20pfsrd.com/equipment---final/weapons/weapon-descriptions/ammunition/ammunition-bow-arrow-raining">Arrow, raining</a> (1)</td>
@@ -1914,7 +1914,7 @@ Ammunition</th>
 <td >1/2 lb.</td>
 <td ><a href="http://www.d20pfsrd.com/equipment---final/weapons/weapon-descriptions/ammunition/arrow-throwing">see text</a></td>
 <td ><a href="http://www.d20pfsrd.com/equipment---final/weapons/weapon-descriptions/ammunition/arrow-throwing">see text</a></td>
-<td ><a href="" target="_blank">RTT</a></td>
+<td ><a href="" target="_blank" title="Pathfinder Player Companion: Ranged Tactics Toolbox">RTT</a></td>
 </tr>
 <tr>
 <td><a href="http://www.d20pfsrd.com/equipment---final/weapons/weapon-descriptions/ammunition/ammunition-bow-arrow-trip">Arrow, trip</a> (1)</td>
@@ -2264,7 +2264,7 @@ One-Handed Melee Weapons</th>
 <td >4 lbs.</td>
 <td >B</td>
 <td >see text</td>
-<td ><a href="" target="_blank">RTT</a></td>
+<td ><a href="" target="_blank" title="Pathfinder Player Companion: Ranged Tactics Toolbox">RTT</a></td>
 </tr>
 <tr>
 <td><a href="http://www.d20pfsrd.com/equipment---final/weapons/weapon-descriptions/rhoka">Rhoka</a></td>
@@ -2744,7 +2744,7 @@ Ranged Weapons</th>
 <td >12 lbs.</td>
 <td >P</td>
 <td >—</td>
-<td ><a href="" target="_blank">RTT</a></td>
+<td ><a href="" target="_blank" title="Pathfinder Player Companion: Ranged Tactics Toolbox">RTT</a></td>
 </tr>
 <tr>
 <td><a href="http://www.d20pfsrd.com/equipment---final/weapons/weapon-descriptions/crank-crossbow-light">Crossbow, crank (light)</a></td>
@@ -2756,7 +2756,7 @@ Ranged Weapons</th>
 <td >6 lbs.</td>
 <td >P</td>
 <td >—</td>
-<td ><a href="" target="_blank">RTT</a></td>
+<td ><a href="" target="_blank" title="Pathfinder Player Companion: Ranged Tactics Toolbox">RTT</a></td>
 </tr>
 <tr>
 <td><a href="http://www.d20pfsrd.com/equipment---final/weapons/weapon-descriptions/crossbow-double">Crossbow, double</a></td>
